Fix take-away boxes running too wide

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -108,10 +108,12 @@
   p {
     margin-top: 0;
   }
-  font-size: 1.2rem;
-  padding: 0.8rem 1.6rem;
+  flex: 1;
+  max-width: 816px;
+  padding: 0.8rem 12px;
   margin: 1.5rem 0;
   justify-self: center;
+  font-size: 1.2rem;
   font-weight: normal;
   text-align: center;
 }
@@ -123,8 +125,6 @@
 }
 
 .take-away {
-  width: 100%;
-  max-width: 800px;
   color: var(--clr-primary);
   background-color: var(--clr-secondary);
   break-inside: avoid;
@@ -178,6 +178,8 @@ p {
 .single-column-text, 
 .two-column-text-container {
   max-width: 840px;
+  display: flex;
+  flex-direction: column;
   margin-inline: auto;
 }
 
